feat: integrate OpenTelemetry for tracing and enhance document processing
- Added OpenTelemetry configuration options in api.yaml for tracing support.
- Implemented tracing capabilities in the API application, allowing for service name and export endpoint configuration.
- Enhanced document loader to extract text from PDF files during ingestion.
- Introduced a PDF parser to handle parsed content seamlessly.
- Updated README and usage documentation to include tracing setup instructions.
- Removed outdated example files related to basic agent and workflow execution.

--- a/configs/api.yaml
+++ b/configs/api.yaml
@@ -31,3 +31,9 @@ monitoring:
   prometheus:
     enable: true
     port: 9092
+  # 链路追踪（OpenTelemetry），未配置 endpoint 时可使用环境变量 OTEL_EXPORTER_OTLP_ENDPOINT
+  tracing:
+    enable: false
+    service_name: "rag-api"
+    export_endpoint: ""   # 如 "localhost:4317"
+    insecure: true
