feat: implement gRPC support and JWT authentication in API
- Added gRPC server capabilities to the API, allowing for enhanced service interactions.
- Integrated JWT authentication middleware for secure API access, with configuration options in api.yaml.
- Updated HTTP router to support JWT-based authentication for protected routes.
- Enhanced document processing and query handling with new gRPC service methods.
- Improved error handling and logging throughout the API and gRPC components.
- Updated dependencies in go.mod and go.sum to include new libraries for JWT and gRPC support.

--- a/configs/api.yaml
+++ b/configs/api.yaml
@@ -10,6 +10,13 @@ api:
     auth: false
     rate_limit: true
     rate_limit_rps: 100
+    # JWT（auth 为 true 时生效）；jwt_key 建议用环境变量 "${JWT_SECRET}"
+    jwt_key: ""
+    jwt_timeout: "1h"
+    jwt_max_refresh: "1h"
+  grpc:
+    enable: false
+    port: 9090
 
 # 服务发现
 service:
