feat: enhance job store configuration and event handling in agent API
- Added job store configuration options in api.yaml, allowing for memory or PostgreSQL backends with customizable lease duration.
- Updated the application to initialize job stores based on configuration, improving flexibility in job event management.
- Enhanced the agent runtime to support PostgreSQL as a persistent job store, facilitating better event tracking and recovery.
- Revised the configuration structure to include job store settings, promoting clearer management of job-related parameters.

--- a/configs/api.yaml
+++ b/configs/api.yaml
@@ -18,6 +18,12 @@ api:
     enable: false
     port: 9090
 
+# 任务事件存储（事件流 + 租约）；未配置或 type 非 postgres 时使用内存后端
+jobstore:
+  type: "memory"           # memory | postgres
+  dsn: ""                  # type=postgres 时必填，如 "postgres://user:pass@localhost:5432/db?sslmode=disable"
+  lease_duration: "30s"     # 租约时长；Heartbeat 间隔建议 < lease_duration/2
+
 # v1 Agent 与 Job 调度（可选；未配置时使用默认：并发 2、重试 2、Backoff 1s）
 agent:
   job_scheduler:
