feat: enhance CLI commands and job management in agent API
- Added new CLI commands for server and worker management, allowing users to start services and create agents directly from the command line.
- Improved the health check and configuration display functionality, providing clearer output for users.
- Updated job management features to include detailed job status retrieval and event tracking, enhancing observability and control over job execution.
- Revised the API to support new endpoints for job tracing and tool management, facilitating better integration and usability for developers.

--- a/configs/api.yaml
+++ b/configs/api.yaml
@@ -24,9 +24,10 @@ jobstore:
   dsn: ""                  # type=postgres 时必填，如 "postgres://user:pass@localhost:5432/db?sslmode=disable"
   lease_duration: "30s"     # 租约时长；Heartbeat 间隔建议 < lease_duration/2
 
-# v1 Agent 与 Job 调度（可选；未配置时使用默认：并发 2、重试 2、Backoff 1s）
+# v1 Agent 与 Job 调度（可选；未配置时使用默认）
 agent:
   job_scheduler:
+    enabled: true        # false 时 API 不拉取执行 Job，由独立 Worker 进程 Claim 执行（jobstore.type=postgres 时建议 false）
     max_concurrency: 2   # 最大并发执行 Job 数
     retry_max: 2       # 失败后最大重试次数（不含首次）
     backoff: "1s"      # 重试前等待时间
