--- a/configs/worker.yaml
+++ b/configs/worker.yaml
@@ -10,42 +10,25 @@ worker:
 
 # 任务事件与元数据存储（与 API 共用 DSN 时，Worker Claim 执行 Job）
 jobstore:
-  type: "memory"
-  dsn: ""
+  type: "postgres"
+  dsn: "postgres://corag:corag@localhost:5432/corag?sslmode=disable"
   lease_duration: "30s"
 
-# 存储配置
+# 存储配置（当前元数据仅支持 memory；mysql 等需后续实现）
 storage:
   metadata:
-    type: "mysql"
-    dsn: "user:pass@tcp(localhost:3306)/rag_db?parseTime=true"
-    pool_size: 10
+    type: "memory"
+    dsn: ""
+    pool_size: 0
+  # 当前仅支持 memory；milvus/s3/redis 等需后续实现
   vector:
-    type: "milvus"
-    addr: "localhost:19530"
-    db: "rag_db"
-    collection: "documents"
+    type: "memory"
   object:
-    type: "s3"
-    endpoint: "s3.amazonaws.com"
-    bucket: "rag-platform"
-    region: "us-east-1"
+    type: "memory"
   cache:
-    type: "redis"
-    addr: "localhost:6379"
-    db: 0
-    password: ""
+    type: "memory"
 
-# 模型配置
-model:
-  embedding:
-    provider: "openai"
-    model: "text-embedding-ada-002"
-    dimension: 1536
-  llm:
-    provider: "openai"
-    model: "gpt-3.5-turbo"
-    temperature: 0.1
+# 模型配置（LLM/Embedding/Vision）由 configs/model.yaml 合并提供，Worker 使用 LoadWorkerConfigWithModel 加载
 
 # 切片配置
 splitter:
@@ -59,7 +42,7 @@ log:
   format: "json"
   file: "worker.log"
 
-# 监控配置
+# 监控配置（多 Worker 时可用环境变量 CORAG_WORKER_METRICS_PORT 指定不同端口，如 9094）
 monitoring:
   prometheus:
     enable: true
