--- a/deployments/compose/docker-compose.yml
+++ b/deployments/compose/docker-compose.yml
@@ -5,7 +5,7 @@ version: "3.8"
 
 services:
   postgres:
-    image: postgres:15-alpine
+    image: registry.openanolis.cn/openanolis/postgres:10.21-8.6
     environment:
       POSTGRES_USER: corag
       POSTGRES_PASSWORD: corag
