feat: implement multi-tenancy support in job management
- Introduced tenant ID handling across job management functionalities, allowing jobs to be associated with specific tenants.
- Updated JobStore interface and implementations to filter jobs by tenant ID, ensuring data isolation.
- Enhanced CLI to accept tenant ID via command-line arguments or environment variables, propagating it through API requests.
- Added observability metrics for job states, including counts by status, to improve monitoring capabilities.
- Updated API handlers to validate tenant ID during job retrieval and management operations, ensuring compliance with multi-tenancy requirements.
- Enhanced documentation to reflect changes in job management and multi-tenancy features.

--- a/deployments/compose/docker-compose.yml
+++ b/deployments/compose/docker-compose.yml
@@ -68,5 +68,18 @@ services:
       postgres:
         condition: service_healthy
 
+  prometheus:
+    image: prometheus/prometheus:v2.47.0
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro
+    command:
+      - --config.file=/etc/prometheus/prometheus.yml
+      - --storage.tsdb.path=/prometheus
+      - --web.enable-lifecycle
+    ports:
+      - "9090:9090"
+    depends_on:
+      - api
+
 volumes:
   postgres_data: {}
