feat(p0): implement zip verify and gate forensics endpoints behind experimental flag
- wire aetheris verify <evidence.zip> to pkg/proof with exit-code semantics

- add CLI tests for valid/tampered evidence zip

- add api.forensics.experimental config and route gating

- default forensics query/evidence-graph/audit-log routes to hidden

- unify 501 response shape to {code,message}

- align docs with implemented verify behavior and config flag

--- a/configs/api.yaml
+++ b/configs/api.yaml
@@ -14,6 +14,9 @@ api:
     jwt_key: ""
     jwt_timeout: "1h"
     jwt_max_refresh: "1h"
+  # 取证查询类接口开关（默认关闭，避免暴露实验能力）
+  forensics:
+    experimental: false
   grpc:
     enable: false
     port: 9090
