--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,3 +40,41 @@ jobs:
 
       - name: Test coverage
         run: go test -coverprofile=coverage.out -covermode=atomic ./...
+
+  postgres-integration:
+    name: Postgres Integration
+    runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:16
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: aetheris
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd "pg_isready -U postgres -d aetheris"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 10
+    env:
+      TEST_JOBSTORE_DSN: postgres://postgres:postgres@localhost:5432/aetheris?sslmode=disable
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: "1.25.7"
+          cache-dependency-path: go.sum
+
+      - name: Install PostgreSQL client
+        run: sudo apt-get update && sudo apt-get install -y postgresql-client
+
+      - name: Apply schema
+        run: psql "$TEST_JOBSTORE_DSN" -f internal/runtime/jobstore/schema.sql
+
+      - name: Run Postgres-backed tests
+        run: go test -v ./internal/runtime/jobstore ./internal/agent/job
