--- a/deployments/compose/docker-compose.yml
+++ b/deployments/compose/docker-compose.yml
@@ -31,6 +31,7 @@ services:
       JOBSTORE_TYPE: postgres
       JOBSTORE_DSN: "postgres://corag:corag@postgres:5432/corag?sslmode=disable"
       JOBSTORE_LEASE_DURATION: "180s"
+      PLANNER_TYPE: "${PLANNER_TYPE:-rule}"
       API_MIDDLEWARE_AUTH: "true"
       API_MIDDLEWARE_JWT_KEY: "local-dev-jwt-key"
       MODEL_DEFAULTS_LLM: "openai.gpt_35_turbo"
@@ -54,6 +55,7 @@ services:
       JOBSTORE_TYPE: postgres
       JOBSTORE_DSN: "postgres://corag:corag@postgres:5432/corag?sslmode=disable"
       JOBSTORE_LEASE_DURATION: "180s"
+      PLANNER_TYPE: "${PLANNER_TYPE:-rule}"
       STORAGE_METADATA_TYPE: memory
       STORAGE_VECTOR_TYPE: memory
       MODEL_DEFAULTS_LLM: "openai.gpt_35_turbo"
@@ -75,6 +77,7 @@ services:
       JOBSTORE_TYPE: postgres
       JOBSTORE_DSN: "postgres://corag:corag@postgres:5432/corag?sslmode=disable"
       JOBSTORE_LEASE_DURATION: "180s"
+      PLANNER_TYPE: "${PLANNER_TYPE:-rule}"
       STORAGE_METADATA_TYPE: memory
       STORAGE_VECTOR_TYPE: memory
       MODEL_DEFAULTS_LLM: "openai.gpt_35_turbo"
